# py-basic-logging

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: unittest.yaml
basic_logging/: __init__.py
tests/: basic_test.py
