[metadata]
name = basic-logging
version = attr: basic_logging.__version__
description = Basic logging utilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ohad31415/py-basic-logging

[options]
packages = find:
install_requires =
    python-json-logger >= 2.0.0, <3
python_requires = >= 3.6

[options.packages.find]
include = basic_logging

[options.extras_require]
test =
    pytest>=6.0.0, <7
    freezegun~=1.1.0
